client/css/app.styl
// Example Stylus file
// All changes are detected and automatically compiled into CSS

@import 'helpers'

// Main

body, html
  height 100%

body
  font normal 1em sans-serif
  //vertical-gradient #eee, #fff
  margin-left 20px
  margin-right 0

a
  color #000a68

a.user-name
  white-space pre-wrap

h1
  font-size 1.8em
  font-weight bold
  margin-top 0.2em
  margin-bottom 0.3em
  text-shadow 1px 1px 2px rgba(100,100,100,0.4)
  text-shadow 2px 2px 3px rgba(140,140,140,0.25)
h2
  font-size 1.3em
  text-shadow 1px 1px 1px rgba(100,100,100,0.4)
  text-shadow 2px 2px 2px rgba(140,140,140,0.25)
  font-weight bold
  margin 0.5em 0

h3
  font-size 1.1em
  text-shadow 1px 1px 1px rgba(100,100,100,0.4)
  text-shadow 2px 2px 2px rgba(140,140,140,0.25)
  margin 0.2em 0
  font-weight bold

h4
  margin 0.15em 0
  font-weight bold
  text-shadow 1px 1px 1px rgba(100,100,100,0.4)

small
  font-size smaller
strong
  font-weight bold

fieldset
  border 1px dashed #888888
  padding 0.8em
  margin 0.6em 0.2em

input[type="number"]
  width 5ex

// help icon
*[data-helpicon]
  display inline-block
  padding 3px
  font-size 1.2em
  font-size 1.2rem

  cursor pointer

#content
  padding 0
  clear both
//header
body > header
  margin-left -20px
  padding 4px 0 4px 8px
  background-color #000000
  vertical-gradient #565656,#131313
  border-bottom 1px solid #aaaaaa
  color #ffffff
  display flex
  flex-flow row wrap
  align-items center
  line-height 1.05
  h1
    // 月下人狼
    flex auto 0 0
    display inline-block
    margin 0
    font-family 'Takao明朝',serif
    font-size 2em
    text-shadow  1px 1px 1px rgba(200,200,200,0.4)
    a
      text-decoration none
      color #ffffff !important
  #userinfo,nav
    display inline-block
    vertical-align 40%
  #userinfo
    padding 0 5px
  nav ul li
    display inline-block
    white-space nowrap
    margin-right 1em
    a
      color #ffffff !important
      text-decoration none
    a:hover
      background-color rgba(0,0,0,.4)
      box-shadow 0 0 5px 5px rgba(0,0,0,.4)
  #toolbar
    margin-left auto
    text-align right
    span.tool-button
      display inline-block
      margin 0 0.7em
      a
        color #ffffff !important
    span.tool-button.tool-disabled
      color #999999
// menu for smatphones
#menu
  display contents
#menu-open-icon
  display none
  margin 0 0.5em 0 auto
  button
    appearance none
    border none
    background none
    color white
@media (max-width: 600px)
  #menu
    display flex
    flex-flow column nowrap
    position fixed
    top 0
    left -100vw
    width 100vw
    height 100vh
    transition left 0.3s ease-in-out

    &.open
      left 0


    color white
    border 1px solid white

    .menu-back
      position absolute
      left 0
      top 0
      width 100vw
      height 100vh
      background-color rgba(0, 0, 0, 0.1)
      z-index 999

    nav
      display block
      flex auto 0 0
      width 80vw
      z-index 1000
      background-color rgba(0, 0, 0, 0.78)
      li
        display block
    #toolbar
      flex auto 1 0
      width 80vw
      margin-left 0
      z-index 1000
      background-color rgba(0, 0, 0, 0.78)
      text-align left

    nav li a, #toolbar .tool-button
      display block
      font-size 1.2em
      padding 1em 0.1em
      border-bottom 1px solid white
  #menu-open-icon
    display block

//おしらせ
body > .notice
  margin-left -20px
  background-color #ffff88
  color black
  font-size smaller
  padding 3px 0 3px 10px

.error
  color #dd0000
// window
.window
  round 5px
  border 1px solid #666666
  box-shadow 2px 2px 3px #000000
  margin 0
  padding 0 0.6em 0.4em
  position absolute
  background-color rgba(240,240,240,0.88)
  color #000000
  max-width 20em

  overflow hidden
  a
    color #0000FF !important

.window.login
  width 20em

.window > h1
  margin 0 -0.6em
  font-size 1.2em
  padding-left 1.6em
  cursor default
  color #333333
  vertical-gradient rgba(255,255,255,0.4), rgba(255,255,255,0.6)
.window > h1 > span.window-icon
  position relative
  left -1.3em
  top 0

.window form p
  text-align center
  margin 0.4em 0
.window .closer
  float right
  background none
  border none
  cursor pointer
.window div.window-content
  margin 1em 0.25em

.window p.window-aside
  text-align right
button.link-like
  background-color transparent
  border none
  color #666666
  text-decoration underline
  cursor pointer
  font-size 0.9em



//user-profile
section.profile
  p
    margin 0.6em 0
  p.edit
    background-color #bbbbbb
    padding 2px
    border-radius 3px
  p.edit:empty
    height 1em
  form#changeprofile > fieldset
    width 100%
  form input[type="text"],form input[type="url"]
    width 100%
  table
    td,th
      border none
  table.newstable
    td,th
      border 1px solid currentColor
  p.toolbar
    text-align right
    span.tool-button
      display inline-block
      margin 0 0.7em
    span.tool-button.tool-disabled
      color #444444
  #alert:not(:empty)
    border 1px dashed #888800
    margin 0.2rem
    padding 0.4rem
    background-color #ffffee
    font-size 0.9em
table.roomstable
  td,th
    border 1px solid currentColor !important
  span.rooms-td-win
    color: #CC0000
    font-weight: bold
  span.rooms-td-lose
    color: #0000DD
    font-weight: bold
//user mylog
section.mylog
  p
    margin 0.6em 0
  label.mylog-open
    cursor pointer
    &.mylog-open-disabled
      color #999999
      cursor default

// graph area
div.graph-area
  display flex
  align-items flex-start
  li > ul
    margin-left 1em
  li.graph-has-child > div.graph-item-title
    cursor pointer
    &:hover
      color #666666
  li.graph-has-child.graph-item-closed > ul
    display none
  div.graph-item-title
    margin-bottom 0.2em

//roomlist
#roomlist td
  img
    vertical-align text-bottom

//lobby
.lobby #users li
  display inline-block
  margin-right 1em

//game
.game
  // cancel default margin.
  margin-left: -20px

#roomname
  margin-left: 8px

#roomname span.roomname-number
  display inline-block
  margin-left 0.7rem
  font-size 1rem
  font-weight normal
#roomname span.roomname-icons
  display inline-block
  margin-left 0.3rem
  font-size 1.2rem
  letter-spacing 0.1rem

//logs (for lobby)
#logs
  //display table
  width 100%
  > div
    margin 0
    padding 1px
    display table-row
    width 100%
    line-height 100%
    time
      font-size x-small
      //opacity 0.5
      margin-left 2em
    div.icon
      border none
    div.name
      font-weight bold
      display table-cell
      //max-width 10em
      overflow:hidden
      white-space nowrap
      max-width 10em
      word-wrap break-word
      text-align right
    div.comment
      display table-cell
      width 100%
    time.time
      display table-cell
      white-space nowrap
      max-width 22ex



//prizeedit
.profile
  li
    vertical-align bottom
  li.prizetip
    border 2px solid black
    background-color #ffffff
    padding 1px
    display inline-block
    margin 3px
    font-size 1.2em
    font-weight bold
  li.conjtip
    border 2px solid black
    background-color #ddffff
    padding 1px
    display inline-block
    margin 3px
    font-size 1.2em
    font-weight bold
  li.deleter
    border 2px solid black
    background-color #ffdddd
    padding 1px
    display inline-block
    margin 3px
    font-size 1.2em
    font-weight bold
  #prizeedit
    border 3px solid black
    padding 5px
    margin 5px
  li:empty
    min-width 1em
    min-height 1.2em

b
  font-weight bold
dt
  font-weight bold

table
  border-collapse collapse
  td,th
    border 1px solid currentColor
    padding 2px
  th
    font-weight bold
.casting table
  tr:nth-child(4n+1),tr:nth-child(4n+3)
    background-color #ffffff
  tr:nth-child(4n+2)
    background-color #eeeeee
  tr:nth-child(4n)
    background-color #dddddd
p
  line-height 110%

// color profile
.colorprofilebox
  display inline-block
  position relative
  top 0
  left 0
  width 50px
  height 50px
  margin 5px 15px
  .backbox
    cursor pointer
    box-sizing border-box
    position absolute
    top 0
    left 0
    width 36px
    height 36px
    border 1px solid black
  .colorbox
    cursor pointer
    box-sizing border-box
    position absolute
    top 14px
    left 14px
    width 36px
    height 36px
    border 1px solid black
.presetbox
  border-top 1px dashed #a0a0a0
  margin-top 6px



//manual
section.manual
  dl
    margin:0.8em 0
    dd
      margin-left 2.5em
    dt
      margin 2px
  p
    line-height 1.2em
    margin 0.8em 0
  ul
    line-height 1.2em
    li
      list-style disc inside
  h1,h2
    margin-top 1.4em
  h3
    margin-top 1em
section.manual.long
  section
    margin-left 2em
    h1,h2
      // 2/1.6=1.25
      margin-left -1.25em
      font-size 1.6em
    h3,h4
      font-size 1.4em
      margin-left -1.43em
  details summary
    border 3px dashed #aaaaaa
    width 50%
    padding 0.4em
    margin 0.4em 0
section.jobmanual
  margin-left 2em
  h1
    margin-left -1.25em
    font-size 1.6em
section.castlist
  dd
    margin-left 2em
//quantum werewolf
tr.deadoff-line
  background-color rgba(0,0,0,.3)

